--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@bhsd/common": "^0.4.0",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.12",
 		"wikilint": "^2.13.2"
