--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "vscode-extension-wikiparser",
 	"version": "0.0.0",
-	"description": "VSCode language server for MediaWiki Wikitext",
+	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
 	"displayName": "Wikitext Language Service",
 	"categories": [
 		"Linters"
@@ -15,6 +15,7 @@
 	"bugs": {
 		"url": "https://github.com/bhsd-harry/vscode-extension-wikiparser/issues"
 	},
+	"qna": "https://github.com/bhsd-harry/vscode-extension-wikiparser/issues",
 	"license": "GPL-3.0",
 	"author": "Bhsd",
 	"publisher": "Bhsd",
@@ -36,6 +37,9 @@
 			}
 		]
 	},
+	"extensionPack": [
+		"RoweWilsonFrederiskHolme.wikitext"
+	],
 	"scripts": {
 		"vscode:prepublish": "npm run lint && npm run build",
 		"build": "tsc --project server/tsconfig.json && tsc --project client/tsconfig.json",
