--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
 					"type": "boolean",
 					"default": true,
 					"description": "Enable linting for Wikitext files."
+				},
+				"wikiparser.articlePath": {
+					"scope": "resource",
+					"type": "string",
+					"default": "",
+					"markdownDescription": "The global constant `wgArticlePath` of the wiki site (e.g., https://en.wikipedia.org/wiki/$1)."
 				}
 			}
 		},
