--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,7 @@
 	],
 	"compilerOptions": {
 		"target": "es2022",
-		"module": "CommonJS",
+		"module": "NodeNext",
 		"allowSyntheticDefaultImports": true,
 		"outDir": "dist",
 		"alwaysStrict": true,
