--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
 	"scripts": {
 		"vscode:prepublish": "npm run lint && npm run build",
 		"build": "tsc --project server/tsconfig.json && tsc --project client/tsconfig.json",
-		"lint": "tsc --noEmit --project server/tsconfig.json && tsc --noEmit --project client/tsconfig.json && eslint --cache ."
+		"lint:ts": "tsc --noEmit --project server/tsconfig.json && tsc --noEmit --project client/tsconfig.json && eslint --cache .",
+		"lint:json": "v8r -s server/src/data/.schema.json server/src/data/*.json",
+		"lint": "npm run lint:ts && npm run lint:json"
 	},
 	"dependencies": {
 		"@bhsd/common": "^0.4.3",
@@ -74,7 +76,8 @@
 	"devDependencies": {
 		"@types/color-rgba": "^2.1.3",
 		"@types/vscode": "^1.95.0",
-		"@vscode/vsce": "^3.2.1"
+		"@vscode/vsce": "^3.2.1",
+		"v8r": "^3.0.0"
 	},
 	"engines": {
 		"node": ">=22.11.0",
