--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "vscode-extension-wikiparser",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
-	"displayName": "Wikitext Language Service",
+	"displayName": "WikiParse Language Server",
 	"categories": [
-		"Linters"
+		"Linters",
+		"Programming Languages"
 	],
 	"keywords": [
 		"mediawiki",
@@ -19,14 +20,10 @@
 	"license": "GPL-3.0",
 	"author": "Bhsd",
 	"publisher": "Bhsd",
-	"main": "./client/dist/extension",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/bhsd-harry/vscode-extension-wikiparser.git"
 	},
-	"activationEvents": [
-		"onLanguage:wikitext"
-	],
 	"contributes": {
 		"configuration": {
 			"type": "object",
@@ -45,23 +42,12 @@
 					"markdownDescription": "The global constant `wgArticlePath` of the wiki site (e.g., https://en.wikipedia.org/wiki/$1)."
 				}
 			}
-		},
-		"languages": [
-			{
-				"id": "wikitext",
-				"extensions": [
-					".wiki"
-				]
-			}
-		]
+		}
 	},
-	"extensionPack": [
-		"RoweWilsonFrederiskHolme.wikitext"
-	],
 	"scripts": {
 		"vscode:prepublish": "npm run lint && npm run build",
-		"build": "tsc --project server/tsconfig.json && tsc --project client/tsconfig.json",
-		"lint:ts": "tsc --noEmit --project server/tsconfig.json && tsc --noEmit --project client/tsconfig.json && eslint --cache .",
+		"build": "tsc --project server/tsconfig.json",
+		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
 		"lint:json": "v8r -s server/src/data/schema/info.json server/src/data/*.json",
 		"lint": "npm run lint:ts && npm run lint:json",
 		"package": "vsce package"
@@ -71,8 +57,6 @@
 		"@types/node": "^22.9.0",
 		"color-rgba": "^3.0.0",
 		"vscode-languageclient": "^9.0.1",
-		"vscode-languageserver": "^9.0.1",
-		"vscode-languageserver-textdocument": "^1.0.12",
 		"wikilint": "^2.13.4"
 	},
 	"devDependencies": {
