--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
 		"@bhsd/common": "^0.4.4",
 		"@types/node": "^22.9.0",
 		"color-rgba": "^3.0.0",
-		"vscode-languageclient": "^9.0.1",
+		"vscode-languageserver": "^9.0.1",
+		"vscode-languageserver-textdocument": "^1.0.12",
 		"wikilint": "^2.13.4"
 	},
 	"devDependencies": {
