--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-extension-wikiparser",
 	"version": "1.0.0",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
-	"displayName": "WikiParse Language Server",
+	"displayName": "WikiParser Language Server",
 	"categories": [
 		"Linters",
 		"Programming Languages"
@@ -27,19 +27,17 @@
 	"contributes": {
 		"configuration": {
 			"type": "object",
-			"title": "Wikitext Language Service",
+			"title": "WikiParser Language Service",
 			"properties": {
 				"wikiparser.lint": {
-					"scope": "resource",
 					"type": "boolean",
 					"default": true,
 					"description": "Enable linting for Wikitext files."
 				},
 				"wikiparser.articlePath": {
-					"scope": "resource",
 					"type": "string",
 					"default": "",
-					"markdownDescription": "The global constant `wgArticlePath` of the wiki site (e.g., https://en.wikipedia.org/wiki/$1)."
+					"markdownDescription": "The global constant `wgArticlePath` of the wiki site (e.g. `https://en.wikipedia.org/wiki/$1`)."
 				}
 			}
 		}
