Substantial revisions to adapt to Wikitext Extension for VSCode (#3)

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 node_modules/
 dist/
-/.vscode/
+/.vscode/settings.json
 # /.vscodeignore
 /.eslintcache*
 /page.wiki
 /personal_access_token
 package-lock.json
+yarn.lock
 
 # Packaged files
 *.vsix
