--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "vscode-extension-wikiparser",
-	"version": "0.0.0",
+	"version": "1.0.0",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
-	"displayName": "Wikitext Language Service",
+	"displayName": "WikiParser Language Server",
 	"categories": [
-		"Linters"
+		"Linters",
+		"Programming Languages"
 	],
 	"keywords": [
 		"mediawiki",
@@ -19,58 +20,39 @@
 	"license": "GPL-3.0",
 	"author": "Bhsd",
 	"publisher": "Bhsd",
-	"main": "./client/dist/extension",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/bhsd-harry/vscode-extension-wikiparser.git"
 	},
-	"activationEvents": [
-		"onLanguage:wikitext"
-	],
 	"contributes": {
 		"configuration": {
 			"type": "object",
-			"title": "Wikitext Language Service",
+			"title": "WikiParser Language Server",
 			"properties": {
 				"wikiparser.lint": {
-					"scope": "resource",
 					"type": "boolean",
 					"default": true,
 					"description": "Enable linting for Wikitext files."
 				},
 				"wikiparser.articlePath": {
-					"scope": "resource",
 					"type": "string",
 					"default": "",
-					"markdownDescription": "The global constant `wgArticlePath` of the wiki site (e.g., https://en.wikipedia.org/wiki/$1)."
+					"markdownDescription": "The global constant `wgArticlePath` of the wiki site (e.g. `https://en.wikipedia.org/wiki/` or `https://en.wikipedia.org/wiki/$1`)."
 				}
 			}
-		},
-		"languages": [
-			{
-				"id": "wikitext",
-				"extensions": [
-					".wiki"
-				]
-			}
-		]
+		}
 	},
-	"extensionPack": [
-		"RoweWilsonFrederiskHolme.wikitext"
-	],
 	"scripts": {
 		"vscode:prepublish": "npm run lint && npm run build",
-		"build": "tsc --project server/tsconfig.json && tsc --project client/tsconfig.json",
-		"lint:ts": "tsc --noEmit --project server/tsconfig.json && tsc --noEmit --project client/tsconfig.json && eslint --cache .",
+		"build": "tsc --project server/tsconfig.json",
+		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
 		"lint:json": "v8r -s server/src/data/schema/info.json server/src/data/*.json",
 		"lint": "npm run lint:ts && npm run lint:json",
 		"package": "vsce package"
 	},
 	"dependencies": {
 		"@bhsd/common": "^0.4.4",
-		"@types/node": "^22.9.0",
 		"color-rgba": "^3.0.0",
-		"vscode-languageclient": "^9.0.1",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.12",
 		"wikilint": "^2.13.5"
@@ -78,6 +60,7 @@
 	"devDependencies": {
 		"@stylistic/eslint-plugin": "^2.10.1",
 		"@types/color-rgba": "^2.1.3",
+		"@types/node": "^22.9.0",
 		"@types/vscode": "^1.95.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
