--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,6 +18,7 @@
 		"strictBindCallApply": true,
 		"strictFunctionTypes": true,
 		"strictNullChecks": true,
-		"useUnknownInCatchVariables": true
+		"useUnknownInCatchVariables": true,
+		"skipLibCheck": true
 	}
 }
