--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	"scripts": {
 		"vscode:prepublish": "npm run lint && npm run build",
 		"build": "tsc --project server/tsconfig.json",
+		"test": "mocha -A --no-diff --file server/dist/test/*.js --ignore=util.js",
 		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
 		"lint:json": "v8r -s server/src/data/schema/info.json server/src/data/*.json",
 		"lint": "npm run lint:ts && npm run lint:json"
@@ -60,6 +61,7 @@
 		"@stylistic/eslint-plugin": "^2.11.0",
 		"@stylistic/stylelint-plugin": "^3.1.1",
 		"@types/color-rgba": "^2.1.3",
+		"@types/mocha": "^10.0.10",
 		"@types/node": "^22.10.1",
 		"@typescript-eslint/eslint-plugin": "^8.16.0",
 		"@typescript-eslint/parser": "^8.16.0",
@@ -76,6 +78,7 @@
 		"eslint-plugin-regexp": "^2.6.0",
 		"eslint-plugin-unicorn": "^56.0.1",
 		"http-server": "^14.1.0",
+		"mocha": "^10.8.2",
 		"stylelint": "^16.11.0",
 		"stylelint-config-recommended": "^14.0.0",
 		"typescript": "^5.7.2",
