--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: ['20.x', '22.11.0']
+        node-version: ['18.x', '20.x', '22.11.0']
 
     steps:
     - uses: actions/checkout@v4
