chore(openLinks): move the LSP to upstream wikilint

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run build",
+		"vscode:prepublish": "npm run build && npm prune --omit=dev",
 		"build": "tsc --project server/tsconfig.json",
 		"test": "mocha",
 		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
@@ -51,38 +51,38 @@
 		"lint": "npm run lint:ts && npm run lint:json"
 	},
 	"dependencies": {
-		"@bhsd/common": "^0.5.0",
+		"@bhsd/common": "^0.6.3",
 		"color-rgba": "^3.0.0",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.12",
-		"wikilint": "^2.14.0"
+		"wikilint": "^2.16.0"
 	},
 	"devDependencies": {
-		"@stylistic/eslint-plugin": "^2.11.0",
-		"@stylistic/stylelint-plugin": "^3.1.1",
+		"@stylistic/eslint-plugin": "^3.1.0",
+		"@stylistic/stylelint-plugin": "^3.1.2",
 		"@types/color-rgba": "^2.1.3",
 		"@types/mocha": "^10.0.10",
-		"@types/node": "^22.10.1",
-		"@typescript-eslint/eslint-plugin": "^8.16.0",
-		"@typescript-eslint/parser": "^8.16.0",
-		"@vscode/vsce": "^3.2.1",
-		"esbuild": "^0.24.0",
+		"@types/node": "^22.13.1",
+		"@typescript-eslint/eslint-plugin": "^8.23.0",
+		"@typescript-eslint/parser": "^8.23.0",
+		"@vscode/vsce": "^3.2.2",
+		"esbuild": "^0.25.0",
 		"eslint": "^8.57.1",
 		"eslint-plugin-es-x": "^8.4.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^50.6.0",
+		"eslint-plugin-jsdoc": "^50.6.3",
 		"eslint-plugin-json-es": "^1.6.0",
 		"eslint-plugin-markdown": "4.0.1",
-		"eslint-plugin-n": "^17.14.0",
+		"eslint-plugin-n": "^17.15.1",
 		"eslint-plugin-promise": "^7.2.1",
-		"eslint-plugin-regexp": "^2.6.0",
+		"eslint-plugin-regexp": "^2.7.0",
 		"eslint-plugin-unicorn": "^56.0.1",
-		"http-server": "^14.1.0",
-		"mocha": "^10.8.2",
-		"stylelint": "^16.11.0",
-		"stylelint-config-recommended": "^14.0.0",
-		"typescript": "^5.7.2",
-		"v8r": "^4.2.0"
+		"http-server": "^14.1.1",
+		"mocha": "^11.1.0",
+		"stylelint": "^16.14.1",
+		"stylelint-config-recommended": "^15.0.0",
+		"typescript": "^5.7.3",
+		"v8r": "^4.2.1"
 	},
 	"engines": {
 		"node": ">=18.12.0",
