--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vscode-extension-wikiparser",
-	"version": "1.1.1",
+	"version": "1.2.0",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
 	"displayName": "WikiParser Language Server",
 	"categories": [
@@ -78,21 +78,20 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run build",
-		"build": "tsc --project server/tsconfig.json",
+		"build": "tsc --project server/tsconfig.json && esbuild server/src/lsp.ts --charset=utf8 --bundle --target=es2023 --platform=node --external:color-rgba --external:vscode-languageserver --external:vscode-languageserver-textdocument --external:vscode-css-languageservice --external:vscode-json-languageservice --outdir=server/dist && mkdir -p server/config && cp -r node_modules/wikilint/config/default.json server/config/ && cp -r node_modules/wikilint/data .",
 		"test": "mocha",
 		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
 		"lint": "npm run lint:ts"
 	},
 	"dependencies": {
-		"@bhsd/common": "^0.6.6",
 		"color-rgba": "^3.0.0",
 		"vscode-css-languageservice": "^6.3.2",
 		"vscode-json-languageservice": "^5.4.3",
 		"vscode-languageserver": "^9.0.1",
-		"vscode-languageserver-textdocument": "^1.0.12",
-		"wikilint": "^2.16.6"
+		"vscode-languageserver-textdocument": "^1.0.12"
 	},
 	"devDependencies": {
+		"@bhsd/common": "^0.7.0",
 		"@stylistic/eslint-plugin": "^3.1.0",
 		"@stylistic/stylelint-plugin": "^3.1.2",
 		"@types/color-rgba": "^2.1.3",
@@ -117,7 +116,8 @@
 		"stylelint": "^16.14.1",
 		"stylelint-config-recommended": "^15.0.0",
 		"typescript": "^5.7.3",
-		"v8r": "^4.2.1"
+		"v8r": "^4.2.1",
+		"wikilint": "^2.17.1"
 	},
 	"engines": {
 		"node": ">=20.9.0",
