--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
 					],
 					"description": "Severity of diagnostics to show."
 				},
+				"wikiparser.linter.lilypond": {
+					"type": "string",
+					"default": "",
+					"markdownDescription": "The path to the LilyPond executable."
+				},
 				"wikiparser.inlay": {
 					"type": "boolean",
 					"default": true,
@@ -78,7 +83,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run build",
-		"build": "tsc --project server/tsconfig.json && esbuild server/src/lsp.ts --charset=utf8 --bundle --target=es2023 --platform=node --external:color-rgba --external:stylelint --external:vscode-languageserver --external:vscode-languageserver-textdocument --external:vscode-css-languageservice --external:vscode-json-languageservice --outdir=server/dist && mkdir -p server/config && cp -r node_modules/wikilint/config/default.json server/config/ && cp -r node_modules/wikilint/data .",
+		"build": "tsc --project server/tsconfig.json && esbuild server/src/lsp.ts --charset=utf8 --bundle --target=es2023 --platform=node --external:chalk --external:entities --external:color-rgba --external:stylelint --external:vscode-languageserver --external:vscode-languageserver-textdocument --external:vscode-css-languageservice --external:vscode-json-languageservice --outdir=server/dist && mkdir -p server/config && cp -r node_modules/wikilint/config server/ && cp -r node_modules/wikilint/data .",
 		"test": "mocha",
 		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
 		"lint": "npm run lint:ts"
@@ -91,7 +96,7 @@
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
 	"devDependencies": {
-		"@bhsd/common": "^0.7.0",
+		"@bhsd/common": "^0.8.0",
 		"@stylistic/eslint-plugin": "^3.1.0",
 		"@stylistic/stylelint-plugin": "^3.1.2",
 		"@types/color-rgba": "^2.1.3",
@@ -117,7 +122,7 @@
 		"stylelint-config-recommended": "^15.0.0",
 		"typescript": "^5.7.3",
 		"v8r": "^4.2.1",
-		"wikilint": "^2.17.1"
+		"wikilint": "^2.18.0"
 	},
 	"engines": {
 		"node": ">=20.9.0",
