--- a/package.json
+++ b/package.json
@@ -83,14 +83,14 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run build",
-		"build": "tsc --project server/tsconfig.json && esbuild server/src/lsp.ts --charset=utf8 --bundle --target=es2023 --platform=node --external:chalk --external:entities --external:color-rgba --external:stylelint --external:vscode-languageserver --external:vscode-languageserver-textdocument --external:vscode-css-languageservice --external:vscode-json-languageservice --outdir=server/dist && mkdir -p server/config && cp -r node_modules/wikilint/config server/ && cp -r node_modules/wikilint/data .",
+		"build": "tsc --project server/tsconfig.json && esbuild server/src/lsp.ts --charset=utf8 --bundle --target=es2023 --platform=node --external:chalk --external:entities --external:stylelint --external:vscode-languageserver --external:vscode-languageserver-textdocument --external:vscode-css-languageservice --external:vscode-json-languageservice --external:vscode-html-languageservice --outdir=server/dist && mkdir -p server/config && cp -r node_modules/wikilint/config . && mv config/default.json server/config/ && cp -r node_modules/wikilint/data .",
 		"test": "mocha",
 		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
 		"lint": "npm run lint:ts"
 	},
 	"dependencies": {
-		"color-rgba": "^3.0.0",
 		"vscode-css-languageservice": "^6.3.2",
+		"vscode-html-languageservice": "^5.3.1",
 		"vscode-json-languageservice": "^5.4.3",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.12"
@@ -105,6 +105,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.23.0",
 		"@typescript-eslint/parser": "^8.23.0",
 		"@vscode/vsce": "^3.2.2",
+		"color-rgba": "^3.0.0",
 		"esbuild": "^0.25.0",
 		"eslint": "^8.57.1",
 		"eslint-plugin-es-x": "^8.4.1",
