--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vscode-extension-wikiparser",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
 	"displayName": "WikiParser Language Server",
 	"categories": [
@@ -77,6 +77,11 @@
 					"type": "string",
 					"default": "",
 					"markdownDescription": "The global constant `wgArticlePath` of the wiki site (e.g. `https://en.wikipedia.org/wiki/` or `https://en.wikipedia.org/wiki/$1`)."
+				},
+				"wikiparser.config": {
+					"type": "string",
+					"default": "",
+					"markdownDescription": "The path to the parser configuration file. It can be a path relative to the extension root or an absolute path."
 				}
 			}
 		}
@@ -96,7 +101,7 @@
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
 	"devDependencies": {
-		"@bhsd/common": "^0.8.0",
+		"@bhsd/common": "^0.8.1",
 		"@stylistic/eslint-plugin": "^3.1.0",
 		"@stylistic/stylelint-plugin": "^3.1.2",
 		"@types/color-rgba": "^2.1.3",
@@ -123,7 +128,7 @@
 		"stylelint-config-recommended": "^15.0.0",
 		"typescript": "^5.7.3",
 		"v8r": "^4.2.1",
-		"wikilint": "^2.18.0"
+		"wikilint": "^2.18.2"
 	},
 	"engines": {
 		"node": ">=20.9.0",
