--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vscode-extension-wikiparser",
-	"version": "1.3.3",
+	"version": "1.3.4",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
 	"displayName": "WikiParser Language Server",
 	"categories": [
@@ -48,6 +48,11 @@
 					"default": "",
 					"markdownDescription": "The path to the LilyPond executable."
 				},
+				"wikiparser.linter.mathjax": {
+					"type": "string",
+					"default": "",
+					"markdownDescription": "The path to the MathJax package."
+				},
 				"wikiparser.inlay": {
 					"type": "boolean",
 					"default": true,
@@ -94,9 +99,9 @@
 		"lint": "npm run lint:ts"
 	},
 	"dependencies": {
-		"vscode-css-languageservice": "^6.3.2",
-		"vscode-html-languageservice": "^5.3.1",
-		"vscode-json-languageservice": "^5.4.3",
+		"vscode-css-languageservice": "^6.3.4",
+		"vscode-html-languageservice": "^5.3.3",
+		"vscode-json-languageservice": "^5.4.4",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
@@ -128,7 +133,7 @@
 		"stylelint-config-recommended": "^15.0.0",
 		"typescript": "^5.8.2",
 		"v8r": "^4.2.1",
-		"wikilint": "^2.20.0"
+		"wikilint": "^2.20.1"
 	},
 	"engines": {
 		"node": ">=20.9.0",
