feat(test): update
close #21

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,4 @@
 {
 	"diff": false,
-	"spec": "server/dist/test/*.js",
-	"ignore": "server/dist/test/util.js"
+	"spec": "server/dist/test/*.test.js"
 }
