--- a/package.json
+++ b/package.json
@@ -124,9 +124,8 @@
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-regexp": "^2.7.0",
 		"eslint-plugin-unicorn": "^56.0.1",
+		"mathjax": "^3.2.2",
 		"mocha": "^11.1.0",
-		"stylelint": "^16.19.1",
-		"stylelint-config-recommended": "^16.0.0",
 		"typescript": "^5.8.2",
 		"wikilint": "^2.21.0"
 	},
