feat(websocket.yml): test WebSocket

--- a/package.json
+++ b/package.json
@@ -95,13 +95,14 @@
 		"vscode:prepublish": "npm run build",
 		"build": "bash build.sh",
 		"test": "mocha && rm -f server/dist/lilypond/*",
+		"start": "jsonrpc-ws-proxy --port 3000 --languageServers websocket.yml",
 		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
 		"lint": "npm run lint:ts"
 	},
 	"dependencies": {
-		"vscode-css-languageservice": "^6.3.4",
-		"vscode-html-languageservice": "^5.3.3",
-		"vscode-json-languageservice": "^5.4.4",
+		"vscode-css-languageservice": "^6.3.7",
+		"vscode-html-languageservice": "^5.5.1",
+		"vscode-json-languageservice": "^5.6.1",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
@@ -110,22 +111,23 @@
 		"@stylistic/eslint-plugin": "^3.1.0",
 		"@types/color-rgba": "^2.1.3",
 		"@types/mocha": "^10.0.10",
-		"@types/node": "^24.0.8",
-		"@typescript-eslint/eslint-plugin": "^8.29.0",
-		"@typescript-eslint/parser": "^8.29.0",
+		"@types/node": "^24.0.10",
+		"@typescript-eslint/eslint-plugin": "^8.35.1",
+		"@typescript-eslint/parser": "^8.35.1",
 		"@vscode/vsce": "^3.5.0",
 		"color-rgba": "^3.0.0",
-		"esbuild": "^0.25.2",
+		"esbuild": "^0.25.5",
 		"eslint": "^8.57.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^51.3.1",
+		"eslint-plugin-jsdoc": "^51.3.3",
 		"eslint-plugin-json-es": "^1.6.0",
-		"eslint-plugin-n": "^17.15.1",
+		"eslint-plugin-n": "^17.20.0",
 		"eslint-plugin-promise": "^7.2.1",
-		"eslint-plugin-regexp": "^2.7.0",
+		"eslint-plugin-regexp": "^2.9.0",
 		"eslint-plugin-unicorn": "^56.0.1",
+		"jsonrpc-ws-proxy": "^0.0.5",
 		"mathjax": "^3.2.2",
-		"mocha": "^11.1.0",
+		"mocha": "^11.7.1",
 		"typescript": "^5.8.2",
 		"wikilint": "^2.21.2"
 	},
