--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
 	"devDependencies": {
-		"@bhsd/common": "^0.14.2",
+		"@bhsd/code-standard": "^1.0.0",
 		"@stylistic/eslint-plugin": "^3.1.0",
 		"@types/color-rgba": "^2.1.3",
 		"@types/mocha": "^10.0.10",
@@ -119,7 +119,7 @@
 		"esbuild": "^0.25.5",
 		"eslint": "^8.57.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^51.3.3",
+		"eslint-plugin-jsdoc": "^52.0.2",
 		"eslint-plugin-json-es": "^1.6.0",
 		"eslint-plugin-n": "^17.20.0",
 		"eslint-plugin-promise": "^7.2.1",
@@ -129,7 +129,7 @@
 		"mathjax": "^3.2.2",
 		"mocha": "^11.7.1",
 		"typescript": "^5.8.2",
-		"wikilint": "^2.21.3"
+		"wikilint": "^2.23.0"
 	},
 	"engines": {
 		"node": ">=20.9.0",
