--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vscode-extension-wikiparser",
-	"version": "1.3.6",
+	"version": "1.4.0",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
 	"displayName": "WikiParser Language Server",
 	"categories": [
@@ -87,6 +87,11 @@
 					"type": "string",
 					"default": "",
 					"markdownDescription": "The path to the parser configuration file. It can be a path relative to the extension root or an absolute path."
+				},
+				"wikiparser.user": {
+					"type": "string",
+					"default": "",
+					"markdownDescription": "According to the [Wikimedia Foundation's policy](https://foundation.wikimedia.org/wiki/Policy:Wikimedia_Foundation_User-Agent_Policy), a URI for a userpage or an email address of the user may be required for some features. This information is only used to identify the user in the User-Agent header of HTTP requests made by the language server."
 				}
 			}
 		}
@@ -107,7 +112,7 @@
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
 	"devDependencies": {
-		"@bhsd/code-standard": "^1.0.0",
+		"@bhsd/code-standard": "^1.0.1",
 		"@stylistic/eslint-plugin": "^3.1.0",
 		"@types/color-rgba": "^2.1.3",
 		"@types/mocha": "^10.0.10",
