--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vscode-extension-wikiparser",
-	"version": "1.4.1",
+	"version": "1.4.2",
 	"description": "Language server extension for MediaWiki Wikitext that supports linting, autocomplete, and more.",
 	"displayName": "WikiParser Language Server",
 	"categories": [
@@ -47,11 +47,6 @@
 					"type": "string",
 					"default": "",
 					"markdownDescription": "The path to the LilyPond executable."
-				},
-				"wikiparser.linter.mathjax": {
-					"type": "string",
-					"default": "",
-					"markdownDescription": "The path to the MathJax package."
 				},
 				"wikiparser.inlay": {
 					"type": "boolean",
@@ -112,7 +107,7 @@
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
 	"devDependencies": {
-		"@bhsd/code-standard": "^1.1.0",
+		"@bhsd/code-standard": "^1.2.0",
 		"@stylistic/eslint-plugin": "^3.1.0",
 		"@types/color-rgba": "^2.1.3",
 		"@types/mocha": "^10.0.10",
@@ -131,10 +126,10 @@
 		"eslint-plugin-regexp": "^2.9.0",
 		"eslint-plugin-unicorn": "^56.0.1",
 		"jsonrpc-ws-proxy": "^0.0.5",
-		"mathjax": "^3.2.2",
+		"mathoid-texvcjs": "^0.5.4",
 		"mocha": "^11.7.1",
 		"typescript": "^5.8.2",
-		"wikilint": "^2.27.0"
+		"wikilint": "^2.29.1"
 	},
 	"engines": {
 		"node": ">=20.9.0",
