--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
 	},
 	"devDependencies": {
 		"@bhsd/code-standard": "^1.3.0",
-		"@stylistic/eslint-plugin": "^3.1.0",
+		"@stylistic/eslint-plugin": "^5.5.0",
 		"@types/color-rgba": "^2.1.3",
 		"@types/mocha": "^10.0.10",
 		"@types/node": "^24.9.2",
@@ -117,14 +117,14 @@
 		"@vscode/vsce": "^3.6.2",
 		"color-rgba": "^3.0.0",
 		"esbuild": "^0.25.11",
-		"eslint": "^8.57.1",
+		"eslint": "^9.38.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-jsdoc": "^61.1.11",
-		"eslint-plugin-json-es": "^1.6.0",
+		"eslint-plugin-jsonc": "^2.21.0",
 		"eslint-plugin-n": "^17.23.1",
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-regexp": "^2.10.0",
-		"eslint-plugin-unicorn": "^56.0.1",
+		"eslint-plugin-unicorn": "^62.0.0",
 		"jsonrpc-ws-proxy": "^0.0.5",
 		"mathoid-texvcjs": "^0.5.4",
 		"mocha": "^11.7.4",
