--- a/package.json
+++ b/package.json
@@ -97,39 +97,41 @@
 		"test": "mocha && rm -f server/dist/lilypond/*",
 		"start": "jsonrpc-ws-proxy --port 3000 --languageServers websocket.yml",
 		"lint:ts": "tsc --noEmit --project server/tsconfig.json && eslint --cache .",
-		"lint": "npm run lint:ts"
+		"lint:md": "markdownlint-cli2 '{,server/}*.md'",
+		"lint": "npm run lint:ts && npm run lint:md"
 	},
 	"dependencies": {
 		"vscode-css-languageservice": "^6.3.8",
 		"vscode-html-languageservice": "^5.6.0",
-		"vscode-json-languageservice": "^5.6.2",
+		"vscode-json-languageservice": "^5.6.3",
 		"vscode-languageserver": "^9.0.1",
 		"vscode-languageserver-textdocument": "^1.0.12"
 	},
 	"devDependencies": {
-		"@bhsd/code-standard": "^1.3.1",
+		"@bhsd/code-standard": "^1.3.2",
 		"@stylistic/eslint-plugin": "^5.5.0",
 		"@types/color-rgba": "^2.1.3",
 		"@types/mocha": "^10.0.10",
-		"@types/node": "^24.9.2",
-		"@typescript-eslint/eslint-plugin": "^8.46.2",
-		"@typescript-eslint/parser": "^8.46.2",
-		"@vscode/vsce": "^3.6.2",
+		"@types/node": "^24.10.1",
+		"@typescript-eslint/eslint-plugin": "^8.46.4",
+		"@typescript-eslint/parser": "^8.46.4",
+		"@vscode/vsce": "^3.7.0",
 		"color-rgba": "^3.0.0",
-		"esbuild": "^0.25.11",
-		"eslint": "^9.38.0",
+		"esbuild": "^0.25.12",
+		"eslint": "^9.39.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^61.1.11",
+		"eslint-plugin-jsdoc": "^61.2.1",
 		"eslint-plugin-jsonc": "^2.21.0",
 		"eslint-plugin-n": "^17.23.1",
 		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-regexp": "^2.10.0",
 		"eslint-plugin-unicorn": "^62.0.0",
 		"jsonrpc-ws-proxy": "^0.0.5",
-		"mathoid-texvcjs": "^0.5.4",
-		"mocha": "^11.7.4",
+		"markdownlint-cli2": "^0.19.0",
+		"mathoid-texvcjs": "^0.6.0",
+		"mocha": "^11.7.5",
 		"typescript": "^5.9.3",
-		"wikilint": "^2.30.0"
+		"wikilint": "^2.31.0"
 	},
 	"engines": {
 		"node": ">=20.9.0",
