--- a/.vscodeignore
+++ b/.vscodeignore
@@ -10,6 +10,7 @@ server/README.md
 .github/
 .git/
 assets/
+!assets/logo.png
 **/test/
 */src/
 **/.schema.json
@@ -17,6 +18,7 @@ assets/
 *.sh
 eslint.*.mjs
 .eslintcache*
+.markdownlint.json
 .gitignore
 .mocharc.json
 node_modules/vscode-*/lib/esm/
